--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     
     <!-- All Plugins Css -->
     <link href="css/plugins.css" rel="stylesheet">
-    <link rel="shortcut icon" href="img/logo.ico" />
+    <link rel="shortcut icon" href="img/logo2021.png" />
     <!-- Custom style -->
    <link href="css/overwrite.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
