--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 					<div class="pricing">
 						<div class="prc-header">
 							<h3>2018</h3>
+							<p>Recife - PE</p>
 						</div>
 						<div style="display: flex;flex-direction: row;justify-content: center;align-items: center" >
 							<img style="width: 200px;height:150px;" src="img/jam2018.png" class="img-responsive">
@@ -134,6 +135,7 @@
 					<div class="pricing">
 						<div class="prc-header">
 							<h3>2019</h3>
+							<p>Recife - PE</p>
 						</div>
 						<div style="display: flex;flex-direction: row;justify-content: center;align-items: center" >
 							<img style="width: 200px;height:150px;" src="img/banner.png" class="img-responsive">
@@ -150,6 +152,7 @@
 					<div class="pricing">
 						<div class="prc-header">
 							<h3>2020</h3>
+							<p>Recife e Caruaru - PE</p>
 						</div>
 						<div style="display: flex;flex-direction: row;justify-content: center;align-items: center" >
 							<img style="width: 200px;height:150px;" src="img/ilustra.png" class="img-responsive">
@@ -184,7 +187,6 @@
 				<div class="row">
 					<div class="row-heading">
 						<h2> <span>Patrocinadores:</span></h2>
-						<!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>-->
 					</div>
 				</div>
 				<div class="row">
@@ -266,7 +268,6 @@
 						<ul class="footer-navi">
 							<li><a href="#home">Home</a></li>
 							<li><a href="#sobre">Sobre</a></li>
-							<!--<li><a href="#services">Services</a></li>-->
 							<li><a href="#edicoes">Edições Anteriores</a></li>
 							<li><a href="#patrocinadores">Patrocinadores</a></li>
 							<li><a href="#contact">Contato</a></li>
