Troca de ilustração e cores

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				<div class="container">
 					<!-- Atualiza aqui a ilustração -->
 					<div style="display: flex;flex-direction: row;justify-content: center;align-items: center" >
-						<img src="img/ilustra.png" class="img-responsive" alt="jam das minas" style="width: 70%;height: 50%; " />
+						<img src="img/2021.jpg" class="img-responsive" alt="jam das minas" style="width: 70%;height: 50%; " />
 					</div>
 				</div>
 			</div>
@@ -121,7 +121,7 @@
 							<p>Recife - PE</p>
 						</div>
 						<div style="display: flex;flex-direction: row;justify-content: center;align-items: center" >
-							<img style="width: 200px;height:150px;" src="img/jam2018.png" class="img-responsive">
+							<img style="width: 200px;height:150px;" src="img/ilustra-2018.png" class="img-responsive">
 						</div>
 						<ul>
 							<li><strong> <a href = "https://www.artstation.com/miladosanjos">Camila dos Anjos </a> - </strong>Ilustradora</li>
