--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				<div class="container">
 					<!-- Atualiza aqui a ilustração -->
 					<div style="display: flex;flex-direction: row;justify-content: center;align-items: center" >
-						<img src="img/2021.jpg" class="img-responsive" alt="jam das minas" style="width: 70%;height: 50%; " />
+						<img src="img/2021.png" class="img-responsive" alt="jam das minas" style="width: 70%;height: 50%; " />
 					</div>
 				</div>
 			</div>
@@ -264,14 +264,9 @@
 							<li class="instagram"><a href="https://instagram.com/jamdasminas?igshid=1hjg3r2cq7y99"><i class="fa fa-instagram"></i></a></li>
 						</ul>
 					</div>
-					<div class="footer-widget palavra">
-						<ul class="footer-navi">
-							<li><a href="#home">Home</a></li>
-							<li><a href="#sobre">Sobre</a></li>
-							<li><a href="#edicoes">Edições Anteriores</a></li>
-							<li><a href="#patrocinadores">Patrocinadores</a></li>
-							<li><a href="#contact">Contato</a></li>
-						</ul>
+					<div class="footer-widget">
+						<br><br>
+						<p>Game Jam das Minas 2021</p>
 					</div>
 					<div class="footer-widget-copy">
 						<!--<p>Copyright@ 2019 Appley Design By <a href="https://themezhub.com/">ThemezHub</a></p>-->
