--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 			<div class="banner" id="home">  
 				<div class="container">
 					<!-- Atualiza aqui a ilustração -->
-					<div style="display: flex;flex-direction: row;justify-content: center;align-items: center" >
-						<img src="img/2021.png" class="img-responsive" alt="jam das minas" style="width: 70%;height: 50%; " />
+					<div style="display: flex;flex-direction: row;justify-content: center;" >
+						<img src="img/2021.png" class="img-responsive" alt="jam das minas" style="width: 80%;height: 40%; " />
 					</div>
 				</div>
 			</div>
