--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <link rel="shortcut icon" href="img/logo2021.png" />
     <!-- Custom style -->
    <link href="css/overwrite.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+	<link href="css/style.css" rel="stylesheet">
+	<link href= "css/slider.css" rel="stylesheet">
     
 	</head>
 	<body>
@@ -162,8 +163,40 @@
 					</div>
 				</div>
 			</div>
-		</section>
 		
+			<!-- SLIDER -->
+			<ul class="slider">
+				<li>
+					  <img src="img/logo2021.png" />
+				</li>
+				<li>
+					  <img src="img/ilustra.png" />
+				</li>
+				<li>
+					  <img src="img/minas_.png" />
+				</li>
+			</ul>
+			
+			<ul class="slider">
+				<li>
+					  <input type="radio" id="slide1" name="slide" checked>
+					  <label for="slide1"></label>
+					  <img src="img/logo2021.png" />
+				</li>
+				<li>
+					  <input type="radio" id="slide2" name="slide">
+					  <label for="slide2"></label>
+					  <img src="img/ilustra.png" />
+				</li>
+				<li>
+					  <input type="radio" id="slide3" name="slide">
+					  <label for="slide3"></label>
+					  <img src="img/minas_.png" />
+				</li>
+			</ul>
+			
+		</section>
+
 		<!-- video -->
 		<section class="video-sec" id="video" style="background:url(img/video-bg.png) no-repeat">
 			<div class="container">
@@ -326,3 +359,40 @@
 		</div>
 	</body>
 </html>
+
+<!-- CARROSSEL
+
+	<ul class="slider">
+    <li>
+          <img src="images/1.jpg" />
+    </li>
+    <li>
+          <img src="images/2.jpg" />
+    </li>
+    <li>
+          <img src="images/3.jpg" />
+    </li>
+</ul>
+
+/////
+
+<ul class="slider">
+    <li>
+          <input type="radio" id="slide1" name="slide" checked>
+          <label for="slide1"></label>
+          <img src="images/1.jpg" />
+    </li>
+    <li>
+          <input type="radio" id="slide2" name="slide">
+          <label for="slide2"></label>
+          <img src="images/2.jpg" />
+    </li>
+    <li>
+          <input type="radio" id="slide3" name="slide">
+          <label for="slide3"></label>
+          <img src="images/3.jpg" />
+    </li>
+</ul>
+
+
+-->
