--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		</div>		
 		
 		<!-- Sobre-->
-		<section class="smart-features" id="sobre">
+		<section id="sobre">
 			<div class="container">
 				<div class="row">
 					<div class="smart-header">
@@ -110,55 +110,56 @@
 					</div>	
 				</div>
 
-			<div class="row no-padd">
-				<div class="col-md-3 col-sm-6">
-					<div class="pricing">
-						<div class="prc-header">
-							<h3>2018</h3>
-							<p>Recife - PE</p>
+				<div class="row no-padd baixo">
+					<div class="col-md-3 col-sm-6">
+						<div class="pricing">
+							<div class="prc-header">
+								<h3>2018</h3>
+								<p>Recife - PE</p>
+							</div>
+							<div style="display: flex;flex-direction: row;justify-content: center;align-items: center" >
+								<img style="width: 200px;height:150px;" src="img/ilustra-2018.png" class="img-responsive">
+							</div>
+							<ul>
+								<li><strong> <a href = "https://www.artstation.com/miladosanjos">Camila dos Anjos </a> - </strong>Ilustradora</li>
+								<!--<li><strong>7</strong> Jogos Criados</li>-->
+							</ul>
+							<button  type="submit" class="btn select-plan" name="" value=""><a href="https://www.portodigital.org/119/37829-confira-os-jogos-desenvolvidos-na-1-portomidia-game-jam-das-minas?id_cat=119&id_post=37829&slug=confira-os-jogos-desenvolvidos-na-1-portomidia-game-jam-das-minas"><font color="white"> Games</font></a></button>
 						</div>
-						<div style="display: flex;flex-direction: row;justify-content: center;align-items: center" >
-							<img style="width: 200px;height:150px;" src="img/ilustra-2018.png" class="img-responsive">
-						</div>
-						<ul>
-							<li><strong> <a href = "https://www.artstation.com/miladosanjos">Camila dos Anjos </a> - </strong>Ilustradora</li>
-							<!--<li><strong>7</strong> Jogos Criados</li>-->
-						</ul>
-						<button  type="submit" class="btn select-plan" name="" value=""><a href="https://www.portodigital.org/119/37829-confira-os-jogos-desenvolvidos-na-1-portomidia-game-jam-das-minas?id_cat=119&id_post=37829&slug=confira-os-jogos-desenvolvidos-na-1-portomidia-game-jam-das-minas"><font color="white"> Games</font></a></button>
 					</div>
-				</div>
 		
-				<div class="col-md-3 col-sm-6">
-					<div class="pricing">
-						<div class="prc-header">
-							<h3>2019</h3>
-							<p>Recife - PE</p>
+					<div class="col-md-3 col-sm-6">
+						<div class="pricing">
+							<div class="prc-header">
+								<h3>2019</h3>
+								<p>Recife - PE</p>
+							</div>
+							<div style="display: flex;flex-direction: row;justify-content: center;align-items: center" >
+								<img style="width: 200px;height:150px;" src="img/banner.png" class="img-responsive">
+							</div>
+							<ul>
+								<li><strong> <a href = "https://www.instagram.com/morkitten/?hl=pt-br">Morgan Manginelli </a> - </strong>Ilustradora</li>
+								<!--<li><strong>7</strong> Jogos Criados</li>-->
+							</ul>
+							<button  type="submit" class="btn select-plan" name="" value=""><a href="https://itch.io/jam/jam-das-minas-2019"><font color="white"> Games</font></a></button>
 						</div>
-						<div style="display: flex;flex-direction: row;justify-content: center;align-items: center" >
-							<img style="width: 200px;height:150px;" src="img/banner.png" class="img-responsive">
-						</div>
-						<ul>
-							<li><strong> <a href = "https://www.instagram.com/morkitten/?hl=pt-br">Morgan Manginelli </a> - </strong>Ilustradora</li>
-							<!--<li><strong>7</strong> Jogos Criados</li>-->
-						</ul>
-						<button  type="submit" class="btn select-plan" name="" value=""><a href="https://itch.io/jam/jam-das-minas-2019"><font color="white"> Games</font></a></button>
 					</div>
-				</div>
 			
-				<div class="col-md-3 col-sm-6">
-					<div class="pricing">
-						<div class="prc-header">
-							<h3>2020</h3>
-							<p>Recife e Caruaru - PE</p>
+					<div class="col-md-3 col-sm-6">
+						<div class="pricing">
+							<div class="prc-header">
+								<h3>2020</h3>
+								<p>Recife e Caruaru - PE</p>
+							</div>
+							<div style="display: flex;flex-direction: row;justify-content: center;align-items: center" >
+								<img style="width: 200px;height:150px;" src="img/ilustra.png" class="img-responsive">
+							</div>
+							<ul>
+								<li><strong> <a href = "https://www.instagram.com/soaresdelapaula/">Paula Soares </a> - </strong>Ilustradora</li>
+								<!--<li><strong>7</strong> Jogos Criados</li>-->
+							</ul>
+							<button  type="submit" class="btn select-plan" name="" value=""><a href="https://itch.io/jam/jdm2020"><font color="white"> Games</font></a></button>
 						</div>
-						<div style="display: flex;flex-direction: row;justify-content: center;align-items: center" >
-							<img style="width: 200px;height:150px;" src="img/ilustra.png" class="img-responsive">
-						</div>
-						<ul>
-							<li><strong> <a href = "https://www.instagram.com/soaresdelapaula/">Paula Soares </a> - </strong>Ilustradora</li>
-							<!--<li><strong>7</strong> Jogos Criados</li>-->
-						</ul>
-						<button  type="submit" class="btn select-plan" name="" value=""><a href="https://itch.io/jam/jdm2020"><font color="white"> Games</font></a></button>
 					</div>
 				</div>
 			</div>
