--- a/index.html
+++ b/index.html
@@ -242,6 +242,8 @@
 								<p>"Minha primeira game jam foi a Jam das Minas.
 									É incrível estar num local cheio de minas que também amam jogos. Como não tinha experiência, foi muito gratificante pra mim trocar ideia com quem já tinha. O ambiente é agradável, a equipe muito empenhada em dar todo o suporte, e é uma baita oportunidade de conhecer gente incrível daqui de Recife." </p>
 							</div>	
+						</div>	
+							</div>	
 								<p style="color: #a004c7; font-size: 20px;"><strong>Artista na MANIFESTO</strong></p>
 						</div>
 					</div>
@@ -392,13 +394,15 @@
 					<div class="footer-social">
 						<ul class="footer-social-pro">
 							<li class="instagram"><a href="https://instagram.com/jamdasminas?igshid=1hjg3r2cq7y99" target="_blank"><i class="fa fa-instagram"></i></a></li>
+							<li class="twitter"><a href="https://www.linkedin.com/company/game-jam-das-minas/"><i class="fa fa-linkedin"></i></a></li>
 						</ul>
 					</div>
 					<div class="footer-widget">
 						<br><br>
-						<p>Game Jam das Minas 2021</p>
+						<p>JAM DAS MINAS</p>
 					</div>
 					<div class="footer-widget-copy">
+						<p>© Game Jam das Minas 2021</p>
 						<!--<p>Copyright@ 2019 Appley Design By <a href="https://themezhub.com/">ThemezHub</a></p>-->
 					</div>
 				</div>
