Links para a pré-inscrição

--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
 						<p>Em 2021 nasce a Minas GameDev Week, uma semana inteira de palestras e minicursos, com algumas das melhores profissionais da indústria. 
 							Toda a programação será disponibilizada de forma gratuita e online, através de lives abertas no Youtube e outras exclusivas para participantes da Jam no Discord. Mais espaço para aprendermos juntas e crescermos juntas!
 						</p>
-						<!-- link para a pré inscriçao aqui!!!!!-->
-						<p>Quer aprender a fazer jogos de graça? <a href="https://forms.gle/ZYqGgAVQwye1tNLC6"><strong>Só vamo!</strong></a></p>
+						<!-- link para a pré inscriçao já está aqui!!!!!-->
+						<p>Quer aprender a fazer jogos de graça? <a href="https://forms.gle/zAaCxMdKUDCsiqKj8"><strong>Só vamo!</strong></a></p>
 					</div>
 				</div>
 			</div>
@@ -130,8 +130,8 @@
 					</div>
 					<div style="display: flex;flex-direction: row;justify-content: center;align-items: center" >
 						
-						<!-- Colocar aqui link da inscrição -->
-						<a href="https://forms.gle/ZYqGgAVQwye1tNLC6" class="banner-btn login-btn" title="pré-inscrição" ><h4>Vem com a gente!</h4></a>
+						<!-- link para a pré inscriçao já está aqui!!!!!-->
+						<a href="https://forms.gle/zAaCxMdKUDCsiqKj8" class="banner-btn login-btn" title="pré-inscrição" ><h4>Vem com a gente!</h4></a>
 					</div>				
 				</div>
 			</div>
