--- a/index.html
+++ b/index.html
@@ -78,9 +78,12 @@
 					<div class="features-caption">
 						<p>Nossa Game Jam é feita por uma equipe de mulheres ligadas ao desenvolvimento de jogos digitais em Recife-PE. Somos voluntárias com os mais diversos backgrounds, unidas por uma causa: contribuir para que a indústria de games seja cada vez mais diversa e inclusiva.</p>
 					
-						<p>Que tal apoiar as ações da Jam das Minas? 
+						<p>Que tal apoiar as ações da Jam das Minas?
+							<br>
+							<br>
 							<a href="mailto:gamejamdasminas@gmail.com?subject= Quero patrocinar!&body=Digite sua mensagem">
-								<strong>Quero patrocinar! </strong></a> 
+								<strong>Quero patrocinar! </strong></a>
+							<br> 
 							<a href="mailto:gamejamdasminas@gmail.com?subject=Quero doar!&body=Digite sua mensagem">
 								<strong>Quero fazer uma doação!</strong></a></p>
 
@@ -98,6 +101,7 @@
 						<p>Apoiamos a jornada das participantes até a entrada no mercado de trabalho e lutamos por equidade salarial e ambientes mais inclusivos dentro das empresas.</p>
 	
 						<p>Gostaria de fazer parte da equipe? 
+							<br><br>
 							<a href="mailto:gamejamdasminas@gmail.com?subject=Quero fazer parte da Equipe!&body=Digite sua mensagem"><strong>Faça sua proposta!</strong></a></p>
 
 					</div>
@@ -113,7 +117,10 @@
 							Toda a programação será disponibilizada de forma gratuita e online, através de lives abertas no Youtube e outras exclusivas para participantes da Jam no Discord. Mais espaço para aprendermos juntas e crescermos juntas!
 						</p>
 						<!-- link para a pré inscriçao já está aqui!!!!!-->
-						<p>Quer aprender a fazer jogos de graça? <a href="https://forms.gle/zAaCxMdKUDCsiqKj8"><strong>Só vamo!</strong></a></p>
+						<p>Quer aprender a fazer jogos de graça?
+							<br><br>
+							<a href="https://forms.gle/zAaCxMdKUDCsiqKj8"><strong>Só vamo!</strong></a>
+						</p>
 					</div>
 				</div>
 			</div>
@@ -131,6 +138,7 @@
 					<div style="display: flex;flex-direction: row;justify-content: center;align-items: center" >
 						
 						<!-- link para a pré inscriçao já está aqui!!!!!-->
+						<br><br>
 						<a href="https://forms.gle/zAaCxMdKUDCsiqKj8" class="banner-btn login-btn" title="pré-inscrição" ><h4>Vem com a gente!</h4></a>
 					</div>				
 				</div>
@@ -213,8 +221,8 @@
 				</div>
 
 				<div class="row no-padd baixo">
-					<div class="col-md-4 col-sm-6">
-						<div class="pricing"  style="background-color: #ba9fe4">
+					<div class="col-md-4 col-sm-6" style="width: 350px;height:500px; ">
+						<div class="pricing"  style="background-color: #ba9fe4; height:450px;">
 							<div class="prc-header">
 								<h3>Giulia Cavalcanti</h3>
 							</div>
@@ -225,8 +233,8 @@
 						</div>
 					</div>
 
-					<div class="col-md-4 col-sm-6">
-						<div class="pricing"  style="background-color: #ba9fe4; position: relative;">
+					<div class="col-md-4 col-sm-6" style="width: 350px;height:500px;">
+						<div class="pricing"  style="background-color: #ba9fe4; height:450px; position: relative;">
 							<div class="prc-header">
 								<h3>Malu Miranda</h3>
 							</div>
@@ -239,8 +247,8 @@
 					</div>
 
 					<!-- Coloca aqui o outro depoimento -->
-					<div class="col-md-4 col-sm-6">
-						<div class="pricing"  style="background-color: #ba9fe4; position: relative;">
+					<div class="col-md-4 col-sm-6" style="width: 350px;height:500px;">
+						<div class="pricing"  style="background-color: #ba9fe4; position: relative; height:450px;">
 							<div class="prc-header">
 								<h3>Amanda Lopes</h3>
 							</div>
