Alteraçao da imagem do apoio

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 							<span>Apoio</span>
 						</h2>
 						<div>
-							<img src="img/APOIO.png" 				style="width: 110%; height:30%; background-color: #ffffff;" 
+							<img src="img/APOIOJdM.png" 				style="width: 110%; height:30%; background-color: #ffffff;" 
 								class="img-responsive"
 								alt="antigos Apoiadores"
 							>
