Alteraçao da corealizacao e fonte

--- a/index.html
+++ b/index.html
@@ -59,11 +59,10 @@
 		<!-- Ilustração -->
 		<div class="banner container" id="home" style = "background-color: #ffffff;">  
 				<!-- Atualiza aqui a ilustração -->
-				<div style="display: flex;flex-direction: row;justify-content: center;" >
-					<img src="img/2021.png" class="img-responsive" alt="jam das minas" style="width: 80%;height: 40%; " 
-				/>
+				<div style="display: flex;flex-direction: row;justify-content: center;">
+					<img src="img/2021.png" class="img-responsive" alt="jam das minas" style="width: 80%;height: 40%; ">
 
-			</div>
+				</div>
 		</div>		
 		
 		<!-- Sobre-->
@@ -83,9 +82,7 @@
 							<br>
 							<a href="mailto:gamejamdasminas@gmail.com?subject= Quero patrocinar!&body=Digite sua mensagem">
 								<strong>Quero patrocinar! </strong></a>
-							<br> 
-							<a href="mailto:gamejamdasminas@gmail.com?subject=Quero doar!&body=Digite sua mensagem">
-								<strong>Quero fazer uma doação!</strong></a></p>
+							<br>
 
 					</div>
 				</div>
@@ -291,7 +288,7 @@
 		<section class="screen" id="patrocinadores">
 			<div class="container">
 				<div class="row">
-					<div class="row-heading">
+					<div class="row-heading" style = "margin-top: 30px;">
 						<h2><font color="white"></font>
 							<span>Apoio</span>
 						</h2>
@@ -306,7 +303,7 @@
 							<span>Co-realização:</span>
 						</h2>
 						<div class="center">
-							<img style="width: 50%; height:20%; background-color: #ffffff;" src="img/CO-REALIZACAO.png" class="img-responsive">
+							<img style="width: 20%; height:10%; background-color: #ffffff;" src="img/CO-REALIZACAO.png" class="img-responsive">
 						</div>
 						
 						<br/><br/>
@@ -339,9 +336,6 @@
 			<div class="row">
 				<div class="row-heading">
 					<h2> <span> Que tal Apoiar a Jam das Minas 2020?</span></h2>
-					<div class="features-caption">
-							<p> <font color= "#000">Entre em contato conosco</font></p>
-						</div>
 				</div>
 			</div>
 			<div class="container">
