--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 								<p>Recife - PE</p>
 							</div>
 							<div style="display: flex;flex-direction: row;justify-content: center;align-items: center" >
-								<img style="width: 200px;height:150px;" src="img/ilustra-2018.png" class="img-responsive">
+								<img style="width: 100%;height:100%;" src="img/ilustra-2018.png" class="img-responsive">
 							</div>
 							<ul>
 								<li><strong> <a href = "https://www.artstation.com/miladosanjos">Camila dos Anjos </a> - </strong>Ilustradora</li>
@@ -177,7 +177,7 @@
 								<p>Recife - PE</p>
 							</div>
 							<div style="display: flex;flex-direction: row;justify-content: center;align-items: center" >
-								<img style="width: 200px;height:150px;" src="img/banner.png" class="img-responsive">
+								<img style="width: 57%;height:57%;" src="img/banner.png" class="img-responsive">
 							</div>
 							<ul>
 								<li><strong> <a href = "https://www.instagram.com/morkitten/?hl=pt-br">Morgan Manginelli </a> - </strong>Ilustradora</li>
@@ -194,7 +194,7 @@
 								<p>Recife e Caruaru - PE</p>
 							</div>
 							<div style="display: flex;flex-direction: row;justify-content: center;align-items: center" >
-								<img style="width: 200px;height:150px;" src="img/ilustra.png" class="img-responsive">
+								<img style="width: 60%;height:60%;" src="img/ilustra.png" class="img-responsive">
 							</div>
 							<ul>
 								<li><strong> <a href = "https://www.instagram.com/soaresdelapaula/">Paula Soares </a> - </strong>Ilustradora</li>
